# email_triage

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
.claude/: settings.local.json
env/: __init__.py  data.py  environment.py  models.py  tasks.py
server/: app.py
