[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "2.0.0"
description = "An OpenEnv-compliant environment for evaluating AI agents on email triage tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai>=2.7.2",
    "requests==2.32.3",
    "python-multipart==0.0.12",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
